--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,6 @@
     "homepage": "https://www.opencart.com/index.php?route=marketplace/extension/info&extension_id=35183&filter_search=magenative&filter_category_id=20",
     "license": "v1.0",
     "require": {
-        "magenative/app": ">=1.3.10"
+        "magenative/app": "1.*"
     }
 }
