--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,7 @@
 	"name": "ced_opencart/magenative_app",
     "type": "Ced_Magenative",
     "description": "magenative_app",
-    "keywords": ["opencart", "ecommerce", "framework", "opensource"],
-    "homepage": "https://www.opencart.com/index.php?route=marketplace/extension/info&extension_id=35183&filter_search=magenative&filter_category_id=20",
-    "license": "v1.0",
     "require": {
-        "magenative/app": "1.*"
+        "php": ">=7.4"
     }
 }
