--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,9 @@
 	"name": "ced_opencart/magenative_app",
     "type": "CedMagenative",
     "description": "magenative_app",
+	"keywords": ["relevant","tags","go","here"],
+    "homepage": "https://www.opencart.com/index.php?route=marketplace/extension/info&extension_id=35183&filter_search=magenative&filter_category_id=20",
+    "license": "CED",
     "require": {
         "php": ">=7.4"
     }
