--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,13 @@
     "description": "magenative_app",
 	"keywords": ["relevant","tags","go","here"],
     "homepage": "https://www.opencart.com/index.php?route=marketplace/extension/info&extension_id=35183&filter_search=magenative&filter_category_id=20",
+	"authors": [
+        {
+            "name": "Jack Kelvin",
+            "email": "jack@cedcommerce.com",
+            "role": "Developer"
+        }
+    ],
     "require": {
         "php": ">=7.4"
     }
