--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"name": "cedopencart/magenativeapp",
-    "type": "cedmagenative",
+	"name": "ced-opencart/magenative-app",
+    "type": "ced-magenative",
     "description": "magenative app",
 	"keywords": ["relevant","tags","go","here"],
     "homepage": "https://www.opencart.com/index.php?route=marketplace/extension/info&extension_id=35183&filter_search=magenative&filter_category_id=20",
